<resources>
    <string name="app_name">Курс валют</string>
    <string name="for_sale_text">Продажа</string>
    <string name="for_buy_text">Покупка</string>
    <string name="get_date_button">Выбрать дату</string>
    <string name="get_today_button">Курс сегодня</string>
    <string name="header_activity_text">Информация о наличных курсах валют ПриватБанка на выбранную дату.
        Архив хранит данные за последние 4 года</string>
    <string name="currency">Валюта</string>
    <string name="header_widget">Курс обмена ПБ</string>
    <string name="widget_preview">N/A</string>
    <string name="error_internet_connection">Отсутствует интернет соиденение</string>
    <string name="error_bad_request">Сервис недоступен</string>
    <string name="exchange_rate_today">Курс валют сегодня</string>
    <string name="hint_button_toast">Данное приложение позволяет узнать наличный курс валют Приватбанка.</string>
    <string name="negative_dialog_button">Отмена</string>
    <string name="positive_dialog_button">Принять</string>
    <string name="error_null_data">Отсутствуют данные в банке</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="text_nav_today">Курс сегодня</string>
    <string name="text_nav_archive">Архив курсов</string>
    <string name="text_nav_charts">Графики</string>
    <string name="text_nav_settings">Настройки</string>
    <string name="text_nav_share">Поделиться</string>
    <string name="text_null_rates">Курсы валют не загружены</string>
</resources>
