<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/widgetSpecialColor"
    android:padding="@dimen/widget_margin"
    android:gravity="center_horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/widgetBackgroundColor"
        android:paddingBottom="16dp"
        android:paddingTop="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/currency"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@color/widgetTextColor"
                android:textSize="@dimen/titles_text_widget_size"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/for_buy_text"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@color/widgetTextColor"
                android:textSize="@dimen/titles_text_widget_size"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/for_sale_text"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@color/widgetTextColor"
                android:textSize="@dimen/titles_text_widget_size"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/widget_text_currency1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="USD"
                android:gravity="center_horizontal"
                android:textSize="@dimen/main_text_widget_size"
                android:textColor="@color/widgetTextColor"
                />
            <TextView
                android:id="@+id/widget_text_buy1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/widget_preview"
                android:gravity="center_horizontal"
                android:textSize="@dimen/main_text_widget_size"
                android:textColor="@color/widgetTextColor"/>
            <TextView
                android:id="@+id/widget_text_sale1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/widget_preview"
                android:gravity="center_horizontal"
                android:textSize="@dimen/main_text_widget_size"
                android:textColor="@color/widgetTextColor"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/widget_text_currency2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="EUR"
                android:gravity="center_horizontal"
                android:textSize="@dimen/main_text_widget_size"
                android:textColor="@color/widgetTextColor"/>
            <TextView
                android:id="@+id/widget_text_buy2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/widget_preview"
                android:gravity="center_horizontal"
                android:textSize="@dimen/main_text_widget_size"
                android:textColor="@color/widgetTextColor"
                />
            <TextView
                android:id="@+id/widget_text_sale2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/widget_preview"
                android:gravity="center_horizontal"
                android:textSize="@dimen/main_text_widget_size"
                android:textColor="@color/widgetTextColor"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/widget_text_currency3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="RUB"
                android:gravity="center_horizontal"
                android:textSize="@dimen/main_text_widget_size"
                android:textColor="@color/widgetTextColor"
                />
            <TextView
                android:id="@+id/widget_text_buy3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/widget_preview"
                android:gravity="center_horizontal"
                android:textSize="@dimen/main_text_widget_size"
                android:textColor="@color/widgetTextColor"
                />
            <TextView
                android:id="@+id/widget_text_sale3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/widget_preview"
                android:gravity="center_horizontal"
                android:textSize="@dimen/main_text_widget_size"
                android:textColor="@color/widgetTextColor"
                />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
